// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`status loader open 1`] = `
{
  "__typename": "ChecklistOpen",
  "_key": "work-instance_0085a7cf-2b9d-4056-9ac5-a0b581a9b6fa",
  "closedAt": null,
  "dueAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1726886602034.000000",
    "timeZone": "America/Denver",
  },
  "id": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfMDA4NWE3Y2YtMmI5ZC00MDU2LTlhYzUtYTBiNTgx
YTliNmZhOnN0YXR1cw=="
,
  "inProgressAt": null,
  "openedAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1726886602008.000000",
    "timeZone": "America/Denver",
  },
}
`;

exports[`status loader item - open 1`] = `
{
  "__typename": "ChecklistOpen",
  "_key": "wri_80caee72-cf98-4ab0-8eb1-0884bc880701",
  "closedAt": null,
  "dueAt": null,
  "id": 
"d29ya3Jlc3VsdGluc3RhbmNlOndyaV84MGNhZWU3Mi1jZjk4LTRhYjAtOGViMS0wODg0YmM4ODA3
MDE6c3RhdHVz"
,
  "inProgressAt": null,
  "openedAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1726886602008.000000",
    "timeZone": "America/Denver",
  },
}
`;
